fixes ui
