# api/src/main/kotlin/com/example/attendanceapi/domain/gateway/api/AttendanceGateway.kt
@@ -3,9 +3,10 @@ package com.example.attendanceapi.domain.gateway.api
 import arrow.core.Either
 import com.example.attendanceapi.domain.model.Attendances
 import com.example.attendanceapi.domain.model.DailyAttendance
+import com.example.attendanceapi.domain.model.Employee
 
 interface AttendanceGateway {
-    fun retrieveAttendances(employeeId: String, channelName: String, year: String, month: String): Either<RetrieveAttendancesError, List<DailyAttendance>>
+    fun retrieveAttendances(employeeId: String, channelName: String, year: String, month: String): Either<RetrieveAttendancesError, Pair<Employee, List<DailyAttendance>>>
 
     fun recordAttendances(token: String, companyId: Int, employeeId: Int, dailyAttendances: List<DailyAttendance>): Either<RecordAttendancesError, RecordAttendancesResult>
 }
